# mainu-web

./: .gitignore  AGENTS.md  DESIGN.md  PRD-web.txt  README.md  babel.cfg  hello.py  pyproject.toml
app/: __init__.py  config.py  db.py  i18n.py  main.py  schemas.py  static_data.py
app/locales/en/LC_MESSAGES/: messages.po
app/locales/zh_Hans/LC_MESSAGES/: messages.po
app/locales/zh_Hant/LC_MESSAGES/: messages.po
app/routes/: __init__.py  menu.py
app/services/: __init__.py  llm.py  location.py  prompt.py  share.py  tips.py  upload_session.py
app/static/: matched_photo.json  target_photos.json
app/templates/: home.html  share.html
migrations/: 0001_create_share_tokens.sql  0002_create_upload_sessions.sql
tests/: __init__.py  conftest.py
tests/routes/: test_home_i18n.py  test_menu.py
